feat: release CerbosHelper 1.0.0